# ioc

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  kitsune_ioc.sln  kitsune_ioc.vcxproj  kitsune_ioc.vcxproj.filters  stdafx.h  targetver.h
include/: CMakeLists.txt
include/kitsune/ioc/: Injector.h  Service.h  injector  service
test/: CMakeLists.txt
test/primary-injection/: CMakeLists.txt  test.cpp
